ACTUALIZACION DE LA TABLA INVENTARIOS

--- a/frontend/views/inventarios.html
+++ b/frontend/views/inventarios.html
@@ -26,13 +26,11 @@
     <table class="table table-striped mt-2" id="inventoriesTable">
       <thead>
         <tr>
-          <th>ID</th>
           <th>Tipo</th>
           <th>Marca</th>
           <th>Modelo</th>
           <th>Capacidad</th>
-          <th>Color</th>
-          <th>Stock</th>
+          <th>Stock Total</th>
           <th>Acciones</th>
         </tr>
       </thead>
