--- a/frontend/views/compras.html
+++ b/frontend/views/compras.html
@@ -66,7 +66,8 @@
           <th>Capacidad</th>
           <th>Color</th>
           <th>Cantidad</th>
-          <th>Costo</th>
+          <th>Costo Unitario</th>
+          <th>Costo Total</th>
           <th>Acciones</th>
         </tr> 
       </thead>
